--- a/myfrontend/src/styles/modal.css
+++ b/myfrontend/src/styles/modal.css
@@ -22,6 +22,7 @@
   position: relative;
   animation: slideIn 0.3s ease-out;
   overflow: hidden;
+  overflow-y: hidden;
 }
 
 .modal-content::before {
@@ -89,12 +90,24 @@
   color: #4a5568;
   font-size: 1rem;
   line-height: 1.3;
-  margin-bottom: 1rem;
   text-align: justify;
   background-color: #fff;
   padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  white-space: normal;
+  overflow-y: auto; /* Aplica el scroll aquí */
+  max-height: 200px;
+}
+
+.modal-content p::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra de scroll */
+}
+
+.modal-content p::-webkit-scrollbar-thumb {
+  background-color: #002776; /* Color de la barra de scroll */
+  border-radius: 10px; /* Borde redondeado para el "thumb" */
+  border: 2px solid #f0f0f0; /* Espacio entre la barra y el track */
 }
 
 .modal-content button {
@@ -154,11 +167,6 @@
   .info-label {
     width: auto;
     margin-bottom: 0.2rem;
-  }
-
-  .modal-content p {
-    font-size: 0.9rem;
-    padding: 0.8rem;
   }
 
   .modal-content button {
