--- a/myfrontend/src/styles/modal.css
+++ b/myfrontend/src/styles/modal.css
@@ -4,25 +4,27 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
   animation: fadeIn 0.3s ease-out;
 }
 
+
 .modal-content {
-  background: linear-gradient(135deg, #ffffff 0%, #f0f4ff 100%);
+  background: #fff;
   border-radius: 15px;
   padding: 2rem;
-  width: 90%;
-  max-width: 500px;
+  width: 80%;
+  max-width: 600px;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   position: relative;
   animation: slideIn 0.3s ease-out;
   overflow: hidden;
   overflow-y: hidden;
+  margin: 0 auto;
 }
 
 .modal-content::before {
@@ -33,6 +35,7 @@
   right: 0;
   height: 6px;
   background: linear-gradient(90deg, #002776, #002776);
+
 }
 
 .modal-content h2 {
